--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,7 +5,7 @@
             minHeight="-Infinity" minWidth="-Infinity" prefHeight="184.0"
             prefWidth="203.0" xmlns:fx="http://javafx.com/fxml" fx:controller="sample.Controller">
     <children>
-        <Button layoutX="14.0" layoutY="149.0" mnemonicParsing="false" prefWidth="81.0" text="Cancel"/>
+        <Button stylesheets="/styles/my.css" layoutX="14.0" layoutY="149.0" mnemonicParsing="false" prefWidth="81.0" text="Cancel"/>
         <Button layoutX="108.0" layoutY="149.0" mnemonicParsing="false" prefWidth="81.0" text="Login"/>
         <Label layoutX="14.0" layoutY="22.0" text="Login:"/>
         <PasswordField layoutX="8.0" layoutY="101.0" prefWidth="187.0"/>
